--- a/htdocs/langs/en_US/salaries.lang
+++ b/htdocs/langs/en_US/salaries.lang
@@ -25,3 +25,4 @@ SalariesAndPayments=Salaries and payments
 ConfirmDeleteSalaryPayment=Do you want to delete this salary payment ?
 FillFieldFirst=Fill employee field first
 UpdateAmountWithLastSalary=Set amount of last salary
+FillEndOfMonth=Fill with end of month
