--- a/htdocs/langs/en_US/bookcal.lang
+++ b/htdocs/langs/en_US/bookcal.lang
@@ -1,4 +1,4 @@
-# Copyright (C) ---Put here your own copyright and developer email---
+# Dolibarr language file - Source file is en_US - module Online rendez-vous
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -21,38 +21,23 @@
 ModuleBookCalName = Booking Calendar System
 # Module description 'ModuleBookCalDesc'
 ModuleBookCalDesc = Manage a Calendar to book appointments
+MenuBookcalIndex=Rendez-vous en ligne
+BookcalLabelAvailabilityHelp=Label of the availability range. For example:<br>General availability<br>Availability during christmas holidays
+DurationOfRange=Duration of ranges
 
-#
-# Admin page
-#
 BookCalSetup = BookCal setup
 Settings = Settings
 BookCalSetupPage = BookCal setup page
 BOOKCAL_PUBLIC_INTERFACE_TOPIC = Interface title
-BOOKCAL_MYPARAM1Tooltip = My param 1 tooltip
-BOOKCAL_MYPARAM2=My param 2
-BOOKCAL_MYPARAM2Tooltip=My param 2 tooltip
-
-
-#
-# About page
-#
 About = About
 BookCalAbout = About BookCal
 BookCalAboutPage = BookCal about page
+Calendars=Calendars
 
-#
-# Sample page
-#
-BookCalArea = Home BookCal
-MyPageName = My page name
-
-#
-# Sample widget
-#
-MyWidget = My widget
-MyWidgetDescription = My widget description
-
+Availabilities=Availabilities
+NewAvailabilities=New availabilities
+NewCalendar=New calendar
+ThirdPartyBookCalHelp=Event booked in this calendar will be automatically linked to this third-party.
 AppointmentDuration = Appointment Duration : %s
 BookingSuccessfullyBooked=Your booking as been saved
 BookingReservationHourAfter=We confirm the reservation of your meeting at the date %s
