--- a/htdocs/langs/fr_FR/admin.lang
+++ b/htdocs/langs/fr_FR/admin.lang
@@ -650,8 +650,8 @@ Module2300Name=Travaux planifiés
 Module2300Desc=Gestion des travaux planifiées (alias cron ou table chrono)
 Module2400Name=Événements/Agenda
 Module2400Desc=Gestion des événements. Laissez l'application tracer automatiquement les événements pour des besoins de suivi ou enregistrer manuellement des événements ou rendez-vous dans l'agenda. Ceci est le module le plus important pour une bonne Gestion de la Relation Client ou Fournisseur.
-Module2430Name=Calendrier de réservation en ligne
-Module2430Desc=Proposez un calendrier en ligne pour permettre à quiconque de réserver un rendez-vous, en fonction de plages et de disponibilités prédéfinies.
+Module2430Name=Prise de rendez-vous en ligne
+Module2430Desc=Proposez un calendrier de prise de rendez-vous en ligne, pour permettre à quiconque de réserver un horaire, en fonction de plages et de disponibilités prédéfinies.
 Module2500Name=GED
 Module2500Desc=Gestion de documents (GED). Stockage automatic des documents générés ou stockés. Fonction de partage.
 Module2600Name=API / Web services (serveur SOAP)
