--- a/htdocs/langs/en_US/admin.lang
+++ b/htdocs/langs/en_US/admin.lang
@@ -301,6 +301,7 @@ MAIN_MAIL_AUTOCOPY_TO= Copy (Bcc) all sent emails to
 MAIN_DISABLE_ALL_MAILS=Disable all email sending (for test purposes or demos)
 MAIN_MAIL_FORCE_SENDTO=Send all emails to (instead of real recipients, for test purposes)
 MAIN_MAIL_ENABLED_USER_DEST_SELECT=Suggest emails of employees (if defined) into the list of predefined recipient when writing a new email
+MAIN_MAIL_EXTERNAL_CONTACTS_DEFAULT_RECIPIENTS = Add all external contacts to default recipients
 MAIN_MAIL_NO_WITH_TO_SELECTED=Do not select a default recipient even if single choice
 MAIN_MAIL_SENDMODE=Email sending method
 MAIN_MAIL_SMTPS_ID=SMTP ID (if sending server requires authentication)
