--- a/htdocs/langs/en_US/stocks.lang
+++ b/htdocs/langs/en_US/stocks.lang
@@ -168,6 +168,7 @@ qtyToTranferLotIsNotEnough=You don't have enough stock, for this lot number, fro
 ShowWarehouse=Show warehouse
 MovementCorrectStock=Stock correction for product %s
 MovementTransferStock=Stock transfer of product %s into another warehouse
+BatchStockMouvementAddInGlobal=Batch stock move into global stock (product doesn't use batch anymore)
 InventoryCodeShort=Inv./Mov. code
 NoPendingReceptionOnSupplierOrder=No pending reception due to open purchase order
 ThisSerialAlreadyExistWithDifferentDate=This lot/serial number (<strong>%s</strong>) already exists but with different eatby or sellby date (found <strong>%s</strong> but you enter <strong>%s</strong>).
@@ -322,6 +323,8 @@ BatchNotFound=Lot / serial not found for this product
 StockEntryDate=Date of <br>entry in stock
 StockMovementWillBeRecorded=Stock movement will be recorded
 StockMovementNotYetRecorded=Stock movement will not be affected by this step
+
+
 WarningThisWIllAlsoDeleteStock=Warning, this will also destroy all quantities in stock in the warehouse
 ValidateInventory=Inventory validation
 IncludeSubWarehouse=Include sub-warehouse ?
@@ -331,3 +334,4 @@ ConfirmDeleteBatch=Are you sure you want to delete lot/serial ?
 WarehouseUsage=Warehouse usage
 InternalWarehouse=Internal warehouse
 ExternalWarehouse=External warehouse
+
